[package]
name = "ishmael"
version = "0.1.0"
description = "Rust console app to hunt open source whales, er, projects and dockerize them."
readme = "README.md"
repository = "https://github.com/Gueils/ishmael"
license = "MIT"
authors = ["Luis Ignacio <email@luisignac.io>"]

[dependencies]
curl = "0.2"
rustc-serialize = "0.3"
