[package]
name = "ishmael"
version = "0.1.2"
description = "Rust console app to hunt open source whales, er, projects and dockerize them."
readme = "README.md"
repository = "https://github.com/Gueils/ishmael"
license = "MIT"
authors = ["Luis Ignacio <email@luisignac.io>"]
homepage = "https://github.com/Gueils/ishmael"
keywords = ["docker","dockerization"]
categories = ["docker", "dockerization"]

[dependencies]
curl = "0.2"
rustc-serialize = "0.3"

[badges]
travis-ci = { repository = "gueils/ishmael", branch = "master" }
